deploy/overlays/crc/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: retailflow
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: retailflow
spec:
  host: cloudhop.apps-crc.testing
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
